ActualizarF.java, controlEjecucion.java